--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-# Project-wide Gradle settings.
+# Project-wide Gradle settings for Logi Logistics Ecosystem
+# Compatible with Java 25, Kotlin 2.0.0, Gradle 8.5
 
 # Specifies the JVM arguments used for the daemon process.
 org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC
@@ -19,13 +20,7 @@ org.gradle.configureondemand=true
 kotlin.code.style=official
 
 # Kotlin version (will be used in all modules)
-kotlin.version=2.3.0
-
-# Enable non-transitive R classes
-android.nonTransitiveRClass=true
-
-# Use AndroidX
-android.useAndroidX=true
+kotlin.version=2.0.0
 
 # Enable Kotlin daemon
 kotlin.daemon.jvmargs=-Xmx2048m
@@ -33,3 +28,6 @@ kotlin.daemon.jvmargs=-Xmx2048m
 # Enable parallel compilation
 kotlin.incremental=true
 kotlin.incremental.multiplatform=true
+
+# Suppress Kotlin daemon warning for Java 25
+kotlin.daemon.jvmargs=-Xmx2048m,--add-opens=java.base/java.lang=ALL-UNNAMED,--add-opens=java.base/java.util=ALL-UNNAMED
