--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@
 services:
   # PostgreSQL Database (Version 18)
   postgres-primary:
-    image: postgres:18-alpine
+    image: postgres:18
     container_name: logi-postgres-primary
+    user: "1000:1000"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_DB: logi
-      PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - postgres_primary_data:/var/lib/postgresql/data
       - ./docker/postgres/init-scripts:/docker-entrypoint-initdb.d
