Disable Eureka client for local development

--- a/admin-panel/src/main/resources/application.properties
+++ b/admin-panel/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.thymeleaf.check-template-location=false
 spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=ADMIN
+
+# Disable Eureka for local development
+eureka.client.enabled=false
+spring.cloud.discovery.enabled=false
